Tryng to make page adjust to other devices

--- a/style/style.css
+++ b/style/style.css
@@ -50,6 +50,7 @@ body {
 .choices {
     width: 100vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 40px;
