--- a/style/style.css
+++ b/style/style.css
@@ -95,6 +95,10 @@ h4 {
     width: 250px;
 }
 
+#round-winner {
+    width: 150px;    
+}
+
 #winner {
     display: none;
     flex-direction: column;
